--- a/front-end/style/style.css
+++ b/front-end/style/style.css
@@ -23,22 +23,6 @@
     src: url(../style/Kanit-Regular.ttf);
 }
 
-@keyframes vai {
-    from {
-        transform: translateX(-100%);
-    }
-    to{
-        transform: translateX(0);
-    }
-}
-@keyframes volta {
-    from {
-        transform: translateX(0);
-    }
-    to{
-        transform: translateX(-100%);
-    }
-}
 
 body{
     margin: 0;
@@ -308,9 +292,13 @@ body{
     height: 120px;
     background-color: #027551;
 }
+.menu.aparece{
+    display: block;
+    transform: translateX(0);
+}
 #aba_menu{
-    animation: vai 1s alternate;
-    display: none;
+    transform: translateX(-101%);
+    transition-duration: 1s;
     width: 75%;
     height: 104%;
     position: absolute;
@@ -329,11 +317,9 @@ body{
     color: rgb(199, 194, 194);
 }
 .menu_suspenso{
+    margin-bottom: 160%;
     margin-top: 20%;
     margin-left: 20%;
-}
-#barra_menu{
-    margin-top: 187%;
 }
 .flexivel{
     display: flex;
@@ -818,4 +804,15 @@ body{
 .jogos_SF{
     margin-bottom: 15%;
 }
-
+.logo_prefeitura_menu{
+    filter: invert(100%) sepia(5%) saturate(0%) hue-rotate(297deg) brightness(104%) contrast(104%);
+    width: 130px;
+    height: 70px;
+    padding-left: 5%;
+}
+.logo_projeto_menu{
+    padding-top: 5%;
+    padding-left: 10px;
+    width: 150px;
+    height: 90px;
+}
